[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rln-rag"
version = "0.1.0"
description = "LangGraph-based RAG playground"
authors = [
    { name="billy" }
]
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-huggingface>=0.1.0",
    "huggingface_hub>=0.24.0",
    "transformers>=4.44.0",
    "pydantic>=2.0",
    "python-dotenv",
    "sentence-transformers",
]

[project.optional-dependencies]
dev = [
    "langgraph-cli[inmem]>=0.4.7",
]

[project.scripts]
rln-rag = "rln_rag.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
